enable migrations and fill context with domain entities

--- a/Services/TNS.Database/TNS.Database.csproj
+++ b/Services/TNS.Database/TNS.Database.csproj
@@ -51,12 +51,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TelecommunicationNetworkSimulatorContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TNS.Domain\TNS.Domain.csproj">
+      <Project>{726eece1-3371-448f-aeb6-43f0c3dfb0fb}</Project>
+      <Name>TNS.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
