--- a/Services/TNS.Engine/TNS.Engine.csproj
+++ b/Services/TNS.Engine/TNS.Engine.csproj
@@ -60,6 +60,20 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TNS.Database\TNS.Database.csproj">
+      <Project>{2b13796a-c613-4754-837d-ad65897e65be}</Project>
+      <Name>TNS.Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TNS.Domain\TNS.Domain.csproj">
+      <Project>{726eece1-3371-448f-aeb6-43f0c3dfb0fb}</Project>
+      <Name>TNS.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TNS.Logic\TNS.Logic.csproj">
+      <Project>{47d36562-0e7b-41c8-89ac-ee0023b4c57c}</Project>
+      <Name>TNS.Logic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
