--- a/Services/TNS.Domain/TNS.Domain.csproj
+++ b/Services/TNS.Domain/TNS.Domain.csproj
@@ -51,12 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseStation.cs" />
-    <Compile Include="BaseStationLoad.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="SubscriptionType.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="BaseStation\BaseStation.cs" />
+    <Compile Include="BaseStation\BaseStationLoad.cs" />
+    <Compile Include="Constants\Constants.cs" />
+    <Compile Include="User\SubscriptionType.cs" />
+    <Compile Include="User\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Enums.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
