--- a/Services/TNS.Database/TNS.Database.csproj
+++ b/Services/TNS.Database/TNS.Database.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\IUnitOfWork.cs" />
     <Compile Include="Migrations\202101162017598_AddInitialScheme.cs" />
     <Compile Include="Migrations\202101162017598_AddInitialScheme.designer.cs">
       <DependentUpon>202101162017598_AddInitialScheme.cs</DependentUpon>
@@ -65,6 +66,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BaseStationRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="TelecommunicationNetworkSimulatorContext.cs" />
   </ItemGroup>
   <ItemGroup>
