--- a/Services/TNS.Domain/TNS.Domain.csproj
+++ b/Services/TNS.Domain/TNS.Domain.csproj
@@ -53,10 +53,12 @@
   <ItemGroup>
     <Compile Include="BaseStation\BaseStation.cs" />
     <Compile Include="BaseStation\BaseStationLoad.cs" />
+    <Compile Include="BaseStation\IBaseStationRepository.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="User\SubscriptionType.cs" />
     <Compile Include="User\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\IUserRepository.cs" />
     <Compile Include="Utils\Enums.cs" />
   </ItemGroup>
   <ItemGroup>
